--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,28 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyD7-IBKYNoLnLBgtyb7dBmGucJRILeMcUg",
+      authDomain: "paidicons.firebaseapp.com",
+      projectId: "paidicons",
+      storageBucket: "paidicons.appspot.com",
+      messagingSenderId: "376545202273",
+      appId: "1:376545202273:web:7ba8bdf4a5b2357cb19a20",
+      measurementId: "G-41NQZQKX7C"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </html>
